--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "prettier:test": "prettier --single-quote --trailing-comma es5 --list-different \"src/**/*.js\""
+    "prettier:test": "prettier --single-quote --trailing-comma es5 --list-different \"src/**/*.js\"",
+    "flow": "flow"
   },
   "devDependencies": {
     "enzyme": "^2.9.1",
@@ -22,8 +23,7 @@
     "prettier": "^1.6.1",
     "react-test-renderer": "^15.6.1",
     "stylelint": "^8.0.0",
-    "stylelint-config-recommended": "^1.0.0",
-    "flow": "flow"
+    "stylelint-config-recommended": "^1.0.0"
   },
   "stylelint": {
     "extends": "stylelint-config-recommended",
