add config for gh-pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "library",
   "version": "0.1.0",
   "license": "GPL-3.0+",
+  "homepage": "https://RedTurtle.github.io/library",
   "dependencies": {
     "match-sorter": "^1.8.1",
     "react": "^15.6.1",
@@ -14,12 +15,14 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "prettier:test": "prettier --single-quote --trailing-comma es5 --list-different \"src/**/*.js\"",
-    "flow": "flow"
+    "flow": "flow",
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "devDependencies": {
     "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
     "flow-bin": "^0.53.1",
+    "gh-pages": "^1.0.0",
     "prettier": "^1.6.1",
     "react-test-renderer": "^15.6.1",
     "stylelint": "^8.0.0",
